<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/who_dynamic"
        android:paddingTop="@dimen/padding_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/who_hint"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/amount_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:paddingTop="@dimen/padding_large"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_large"
        android:textColor="#AAA"
        android:text="@string/quick_amount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/ic_action_previous_item" />

        <SeekBar
            android:id="@+id/quick_amount_seek_bar"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large" />

        <Button
            android:id="@+id/button_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/ic_action_next_item" />

    </LinearLayout>

    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/note_hint"
        android:paddingTop="@dimen/padding_large"
        android:scrollHorizontally="false"
        android:inputType="textMultiLine"
        />



    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_large"
        android:paddingTop="@dimen/padding_med">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_owe_you"
            android:id="@+id/i_owe_radioButton"
            android:paddingEnd="60dp"
            android:layout_gravity="center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_owe_me"
            android:id="@+id/you_owe_radioButton"
            android:layout_gravity="center_vertical" />
    </RadioGroup>

</LinearLayout>