<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="@dimen/padding_med"
    android:paddingBottom="@dimen/padding_med">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/padding_nano"
        android:paddingBottom="@dimen/padding_nano" >

        <TextView
            android:id="@+id/individual_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/max_name_width"
            android:paddingLeft="@dimen/padding_med"
            android:text="@string/who_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/who_owes_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_large"
            android:text="@string/money_direction"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.46"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/padding_med"
        android:text="@string/amount_hint"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/button_new_transaction"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/action_new"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:paddingRight="@dimen/padding_nano"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_action_new" />

</LinearLayout>