<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.22"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_med"
                android:paddingRight="@dimen/padding_large"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/dollar_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="@dimen/padding_med"
                android:paddingTop="@dimen/padding_med"
                android:text="@string/amount_hint"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_med">

            <TextView
                android:id="@+id/note_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_med"
                android:paddingTop="@dimen/padding_med"
                android:text="@string/note_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/owes_whome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.0009"
                android:gravity="right"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_med"
                android:text="@string/i_owe_you"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box_open_t"
        android:layout_width="@dimen/min_box_size"
        android:layout_height="@dimen/min_box_size"
        android:layout_weight="2.09"
        android:gravity="right|center_vertical|start"
        android:text="" />

</LinearLayout>